--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Угадай число</h1>
       <p class="between">(Число между 1 и 20)</p>
-      <button class="btn again">Снова!</button>
+      <button class="btn again" onclick="resetGame();">Снова!</button>
       <div class="number">?</div>
     </header>
     <main>
